tdf#98094 make header able to drag in Navigator root content view after

...first drag is done from all categories content view

Change-Id: If76b8fa02a60009e2b60b2b57bae6e0519bf8e2d